<resources>
    <string name="app_name">Github User\'s</string>

    <string name="connection_problem">Connection Problem</string>
    <string name="found">Found</string>
    <string name="people">people</string>
    <string name="search">Search</string>
    <string name="bahasa">Language</string>
    <string name="username">Andifauzy7</string>
    <string name="username_capt">Username :</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="count_repo">26</string>
    <string name="count_followers">120</string>
    <string name="count_following">64</string>
    <string name="repository">Repository</string>
    <string name="capt_name">Name</string>
    <string name="capt_company">Company</string>
    <string name="capt_location">Location</string>
    <string name="capt_bio">Bio</string>
    <string name="name">Andi Fauzy Dewantara</string>
    <string name="company">POLITEKNIK NEGERI BANDUNG</string>
    <string name="location">Bandung, Jawa Barat, Indonesia</string>
    <string name="bio">Software Engineer</string>
    <string name="repo_title">ADT-Type</string>
    <string name="repo_desc">Beragam Jenis Abstract Data Type (ADT).</string>
    <string name="repo_date">2019-05-31T03:40:30Z</string>
    <string name="repo_lang">C++</string>
</resources>